# Document  $Id$
# Summary   File changelog for the chemical-mime-data project.

2007-01-27 Daniel Leidert <daniel.leidert@wgdd.de>

	* README: Updated and completed.

	* html_docs/index.html: Ditto. This seems to be a first complete
	proposal.

2007-01-27 Daniel Leidert <daniel.leidert@wgdd.de>

	* HACKING: Completed content.

	* NEWS: Completed for the 0.1.94 release.

	* TODO: Removed HACKING item.

2007-01-27 Daniel Leidert <daniel.leidert@wgdd.de>

	* xsl/cmd_common.xsl: Renamed exslt extension prefix accordingly to
	http://www.exslt.org/exsl/elements/document/index.html.
	* xsl/cmd_website.xsl: Removed exslt extension (prefix).

2007-01-27 Daniel Leidert <daniel.leidert@wgdd.de>

	* src/chemical-mime-database.xml.in (chemical/x-cxf): Improved
	description wording.

2007-01-27 Daniel Leidert <daniel.leidert@wgdd.de>

	* src/chemical-mime-database.xml.in (chemical/x-compass): Improved
	wording.
	(chemical/x-csml): Added acronym/expanded-acronym combination for
	CSML.

2007-01-27 Daniel Leidert <daniel.leidert@wgdd.de>

	* src/chemical-mime-database.xml.in: Removed all empty icon tags after
	fixing the DTD and the stylesheets. Added the following currently
	not activated MIME types: chemical/x-chemdraw, chemical/x-compass,
	chemical/x-crossfire, chemical/x-csml, chemical/x-cxf,
	chemical/x-embl-dl-nucleotide, chemical/x-galactic-spc,
	chemical/x-gaussian-checkpoint, chemical/x-gaussian-cube,
	chemical/x-gcg8-sequence, chemical/x-isostar, chemical/x-kinemage,
	chemical/x-macmolecule, chemical/x-mif, chemical/x-molconn-Z,
	chemical/x-rosdal, chemical/x-swissprot, chemical/x-vamas-iso14976 and
	chemical/x-xtel.
	(conflicts): Added an fdo attribute for conflicts with the fd.o
	database.
	(specification): Renamed the resource attribute to title.
	(chemical/x-cache, chemical/x-cache-csf): Moved (alphabetical order).
	(chemical/x-cif, chemical/x-mmcif): Removed unused spec-links.
	(chemical/x-genbank): Added magic pattern found in spec.